# glfw-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
src/: main.cc  shader.frag  shader.h
